syntax = "proto3";

package user;

service Account {
    rpc Create (CreateRequest) returns (CreateResponse) {
    }
    rpc Read (ReadRequest) returns (ReadResponse) {
    }
    rpc Update (UpdateRequest) returns (UpdateResponse) {
    }
    rpc Delete (DeleteRequest) returns (DeleteResponse) {
    }
    rpc Search (SearchRequest) returns (SearchResponse) {
    }
    rpc UpdatePassword (UpdatePasswordRequest) returns (UpdatePasswordResponse) {
    }
    rpc Login (LoginRequest) returns (LoginResponse) {
    }
    rpc Logout (LogoutRequest) returns (LogoutResponse) {
    }
    rpc ReadSession (ReadSessionRequest) returns (ReadSessionResponse) {
    }
}

message User {
    int64 id = 1;
    string username = 2;
    string firstName=3;
    string lastName=4;
    int32 mobile=5;
    int64 dob=6;
    int64 doj=7;
    int64 created = 8;
    int64 updated = 9;
}
message Session {
    int64 id = 1;
    string username = 2;
    int64 created = 3;
    int64 expires = 4;
}

//Create
message CreateRequest {
    User user = 1;
    string password = 2;
}
message CreateResponse {
    string message=1;
}
//Read
message ReadRequest {
    string id = 1;
}
message ReadResponse {
    User user = 1;
}
//Update
message UpdateRequest {
    User user = 1;
}
message UpdateResponse {
    string message=1;
}
//Delete
message DeleteRequest {
    string id = 1;
}
message DeleteResponse {
    string message=1;
}
//Search
message SearchRequest {
    string username = 1;
    int64 limit = 3;
    int64 offset = 4;
}
message SearchResponse {
    repeated User users = 1;
}
//Update Password
message UpdatePasswordRequest {
    string userId = 1;
    string oldPassword = 2;
    string newPassword = 3;
    string confirmPassword = 4;
}
message UpdatePasswordResponse {
    string message=1;
}
//Login
message LoginRequest {
    string username = 1;
    string password = 3;
}
message LoginResponse {
    Session session = 1;
}
//Logout
message LogoutRequest {
    string sessionId = 1;
}
message LogoutResponse {
    string message=1;
}
//Read Session
message ReadSessionRequest {
    string sessionId = 1;
}
message ReadSessionResponse {
    Session session = 1;
}